fix overflow in post

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -339,7 +339,7 @@ posts {
     padding: auto;
 }
 
-.card img {
+.enc-profile-img {
     margin: 1rem;
     border-radius: .5rem;
     width: auto;
